--- a/flatpak/local.io.github.lluciocc.Vish copy.yml
+++ b/flatpak/local.io.github.lluciocc.Vish copy.yml
@@ -25,8 +25,6 @@ modules:
       - chmod +x /app/bin/vish
       - install -Dm644 /app/vish/assets/icons/icon.png /app/share/icons/hicolor/256x256/apps/io.github.lluciocc.Vish.png
       - install -Dm644 /app/vish/flatpak/io.github.lluciocc.Vish.desktop /app/share/applications/io.github.lluciocc.Vish.desktop
-      - install -Dm644 flatpak/io.github.lluciocc.Vish.metainfo.xml /app/share/metainfo/io.github.lluciocc.Vish.metainfo.xml
     sources:
-      - type: git
-        url: https://github.com/Lluciocc/Vish.git
-        tag: v1.0.0
+      - type: dir
+        path: ..
